Adjust Swagger Location
