# storage/api-docs/api-docs.json
@@ -397,7 +397,7 @@
         "/api/deletelocation": {
             "delete": {
                 "tags": [
-                    "Delete Location"
+                    "Location"
                 ],
                 "summary": "Delete Location",
                 "description": "Delete Location , by delete location will update status isDeleted into 1)",
@@ -469,7 +469,7 @@
         "/api/updatelocation": {
             "put": {
                 "tags": [
-                    "Update Location"
+                    "Location"
                 ],
                 "summary": "Update Location",
                 "description": "Update Location",
@@ -628,7 +628,7 @@
         "/api/insertlocation": {
             "post": {
                 "tags": [
-                    "Insert Location"
+                    "Location"
                 ],
                 "summary": "Insert Location",
                 "description": "Insert Location",
@@ -785,7 +785,7 @@
         "/api/location": {
             "get": {
                 "tags": [
-                    "Get Location"
+                    "Location"
                 ],
                 "summary": "Get Location",
                 "description": "get Location",
@@ -868,7 +868,7 @@
         "/api/locationdetail": {
             "get": {
                 "tags": [
-                    "Get Location detail"
+                    "Location"
                 ],
                 "summary": "Get Location detail",
                 "description": "get Location detail",
